--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.18.0",
     "@mui/material": "^5.18.0",
     "@mui/material-nextjs": "^7.3.6",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.86.0",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
