--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     volumes:
       # ソースコードをバインドマウント
       - .:/usr/src/app
+      - /usr/src/app/node_modules
     environment:
       - NODE_ENV=development
     env_file:
